Add shopping list category overrides
